cmake_minimum_required(VERSION 3.15)
project(my_solutions_to_leetcode)
set(CMAKE_CXX_STANDARD 17)

add_executable(00008-String-to-Integer  00008-String-to-Integer.cpp)
add_executable(00015-3Sum  00015-3Sum.cpp)
add_executable(00018-4Sum  00018-4Sum.cpp)
add_executable(00037-Sudoku-Solver  00037-Sudoku-Solver.cpp)
add_executable(00039-Combination-Sum  00039-Combination-Sum.cpp)
add_executable(00040-Combination-Sum-II  00040-Combination-Sum-II.cpp)
add_executable(00086-Partition-List  00086-Partition-List.cpp)
add_executable(00090-Subsets-II  00090-Subsets-II.cpp)
add_executable(00132-Palindrome-Partitioning-II  00132-Palindrome-Partitioning-II.cpp)
add_executable(00153-Find-Minimum-in-Rotated-Sorted-Array  00153-Find-Minimum-in-Rotated-Sorted-Array.cpp)
add_executable(00159-Longest-Substring-with-At-Most-Two-Distinct-Characters  00159-Longest-Substring-with-At-Most-Two-Distinct-Characters.cpp)
add_executable(00164-Maximum-Gap  00164-Maximum-Gap.cpp)
add_executable(00166-Fraction-to-Recurring-Decimal  00166-Fraction-to-Recurring-Decimal.cpp)
add_executable(00215-Kth-Largest-Element-in-an-Array  00215-Kth-Largest-Element-in-an-Array.cpp)
add_executable(00216.Combination-Sum-III  00216.Combination-Sum-III.cpp)
add_executable(00223-Rectangle-Area  00223-Rectangle-Area.cpp)
add_executable(interview-17.22-Word-Transformer-LCCI  interview-17.22-Word-Transformer-LCCI.cpp)
add_executable(interview-17.24-Max-Submatrix-LCCI  interview-17.24-Max-Submatrix-LCCI.cpp)
add_executable(main  main.cpp)
add_executable(Offer-51-reversePairs  Offer-51-reversePairs.cpp)
add_executable(00259-3Sum-Smaller  00259-3Sum-Smaller.cpp)
add_executable(00304-Range-Sum-Query-2D-Immutable  00304-Range-Sum-Query-2D-Immutable.cpp)
add_executable(00306-Additive-Number  00306-Additive-Number.cpp)
add_executable(00315-Count-of-Smaller-Numbers-After-Self  00315-Count-of-Smaller-Numbers-After-Self.cpp)
add_executable(00321-Create-Maximum-Number  00321-Create-Maximum-Number.cpp)
add_executable(00322-Coin-Change  00322-Coin-Change.cpp)
add_executable(00327-Count-of-Range-Sum  00327-Count-of-Range-Sum.cpp)
add_executable(00340-Longest-Substring-with-At-Most-K-Distinct-Characters  00340-Longest-Substring-with-At-Most-K-Distinct-Characters.cpp)
add_executable(00347-Top-K-Frequent-Elements  00347-Top-K-Frequent-Elements.cpp)
add_executable(00377-Combination-Sum-IV  00377-Combination-Sum-IV.cpp)
add_executable(00378-Kth-Smallest-Element-in-a-Sorted-Matrix  00378-Kth-Smallest-Element-in-a-Sorted-Matrix.cpp)
add_executable(00424-Longest-Repeating-Character-Replacement  00424-Longest-Repeating-Character-Replacement.cpp)
add_executable(00437-Path-Sum-III  00437-Path-Sum-III.cpp)
add_executable(00445-Add-Two-Numbers-II  00445-Add-Two-Numbers-II.cpp)
add_executable(00454-4Sum-II  00454-4Sum-II.cpp)
add_executable(00467-Unique-Substrings-in-Wraparound-String  00467-Unique-Substrings-in-Wraparound-String.cpp)
add_executable(00480-Sliding-Window-Median  00480-Sliding-Window-Median.cpp)
add_executable(00491-Increasing-Subsequences  00491-Increasing-Subsequences.cpp)
add_executable(00523-Continuous-Subarray-Sum  00523-Continuous-Subarray-Sum.cpp)
add_executable(00560-Subarray-Sum-Equals-K  00560-Subarray-Sum-Equals-K.cpp)
add_executable(00611-Valid-Triangle-Number  00611-Valid-Triangle-Number.cpp)
add_executable(00621-Task-Scheduler  00621-Task-Scheduler.cpp)
add_executable(00643-Maximum-Average-Subarray-I  00643-Maximum-Average-Subarray-I.cpp)
add_executable(00650-2-Keys-Keyboard  00650-2-Keys-Keyboard.cpp)
add_executable(00656-Coin-Path  00656-Coin-Path.cpp)
add_executable(00659-Split-Array-into-Consecutive-Subsequences  00659-Split-Array-into-Consecutive-Subsequences.cpp)
add_executable(00713-Subarray-Product-Less-Than-K  00713-Subarray-Product-Less-Than-K.cpp)
add_executable(00738-Monotone-Increasing-Digits  00738-Monotone-Increasing-Digits.cpp)
add_executable(00767-Reorganize-String  00767-Reorganize-String.cpp)
add_executable(00772-Basic-Calculator-III  00772-Basic-Calculator-III.cpp)
add_executable(00793-Preimage-Size-of-Factorial-Zeroes-Function  00793-Preimage-Size-of-Factorial-Zeroes-Function.cpp)
add_executable(00801-Minimum-Swaps-To-Make-Sequences-Increasing  00801-Minimum-Swaps-To-Make-Sequences-Increasing.cpp)
add_executable(00842-Split-Array-into-Fibonacci-Sequence  00842-Split-Array-into-Fibonacci-Sequence.cpp)
add_executable(00884-Uncommon-Words-from-Two-Sentences  00884-Uncommon-Words-from-Two-Sentences.cpp)
add_executable(00253-Meeting-Rooms-II  00253-Meeting-Rooms-II.cpp)
add_executable(00493-Reverse-Pairs  00493-Reverse-Pairs.cpp)
add_executable(00888-Fair-Candy-Swap  00888-Fair-Candy-Swap.cpp)
add_executable(00992-Subarrays-with-K-Different-Integers  00992-Subarrays-with-K-Different-Integers.cpp)
add_executable(01004-Max-Consecutive-Ones-III  01004-Max-Consecutive-Ones-III.cpp)
add_executable(01043-Partition-Array-for-Maximum-Sum  01043-Partition-Array-for-Maximum-Sum.cpp)
add_executable(01066-Campus-Bikes-II  01066-Campus-Bikes-II.cpp)
add_executable(01094-Car-Pooling  01094-Car-Pooling.cpp)
add_executable(01208-Get-Equal-Substrings-Within-Budget  01208-Get-Equal-Substrings-Within-Budget.cpp)
add_executable(01218-Longest-Arithmetic-Subsequence-of-Given-Difference  01218-Longest-Arithmetic-Subsequence-of-Given-Difference.cpp)
add_executable(01253-Reconstruct-a-2-Row-Binary-Matrix  01253-Reconstruct-a-2-Row-Binary-Matrix.cpp)
add_executable(01300-Sum-of-Mutated-Array-Closest-to-Target  01300-Sum-of-Mutated-Array-Closest-to-Target.cpp)
add_executable(01302-Deepest-Leaves-Sum  01302-Deepest-Leaves-Sum.cpp)
add_executable(01311-Get-Watched-Videos-by-Your-Friends  01311-Get-Watched-Videos-by-Your-Friends.cpp)
add_executable(01367-Linked-List-in-Binary-Tree  01367-Linked-List-in-Binary-Tree.cpp)
add_executable(01577-Number-of-Ways-Where-Square-of-Number-Is-Equal-to-Product-of-Two-Numbers  01577-Number-of-Ways-Where-Square-of-Number-Is-Equal-to-Product-of-Two-Numbers.cpp)
add_executable(01626-Best-Team-With-No-Conflicts  01626-Best-Team-With-No-Conflicts.cpp)
add_executable(01746-Maximum-Subarray-Sum-After-One-Operation  01746-Maximum-Subarray-Sum-After-One-Operation.cpp)
