cmake_minimum_required(VERSION 3.15)
project(my_solutions_to_leetcode)
set(CMAKE_CXX_STANDARD 17)

add_executable(00008-String-to-Integer  00008-String-to-Integer.cpp)
add_executable(00010-Regular-Expression-Matching  00010-Regular-Expression-Matching.cpp)
add_executable(00015-3Sum  00015-3Sum.cpp)
add_executable(00018-4Sum  00018-4Sum.cpp)
add_executable(00022-Generate-Parentheses  00022-Generate-Parentheses.cpp)
add_executable(00030-Substring-with-Concatenation-of-All-Words  00030-Substring-with-Concatenation-of-All-Words.cpp)
add_executable(00037-Sudoku-Solver  00037-Sudoku-Solver.cpp)
add_executable(00039-Combination-Sum  00039-Combination-Sum.cpp)
add_executable(00039-Daily-Temperatures  00039-Daily-Temperatures.cpp)
add_executable(00040-Combination-Sum-II  00040-Combination-Sum-II.cpp)
add_executable(00067-Add-Binary  00067-Add-Binary.cpp)
add_executable(00073-Set-Matrix-Zeroes  00073-Set-Matrix-Zeroes.cpp)
add_executable(00086-Partition-List  00086-Partition-List.cpp)
add_executable(00090-Subsets-II  00090-Subsets-II.cpp)
add_executable(interview-01.07-Rotate-Matrix-LCCI  interview-01.07-Rotate-Matrix-LCCI.cpp)
add_executable(interview-01.08-Zero-Matrix-LCCI  interview-01.08-Zero-Matrix-LCCI.cpp)
add_executable(interview-04.03-List-of-Depth-LCCI  interview-04.03-List-of-Depth-LCCI.cpp)
add_executable(interview-08.02-Robot-in-a-Grid-LCCI  interview-08.02-Robot-in-a-Grid-LCCI.cpp)
add_executable(interview-16.19-Pond-Sizes-LCCI  interview-16.19-Pond-Sizes-LCCI.cpp)
add_executable(interview-16.21-Sum-Swap-LCCI  interview-16.21-Sum-Swap-LCCI.cpp)
add_executable(interview-17.05-Find-Longest-Subarray-LCCI  interview-17.05-Find-Longest-Subarray-LCCI.cpp)
add_executable(interview-17.07-Baby-Names-LCCI  interview-17.07-Baby-Names-LCCI.cpp)
add_executable(interview-17.09-Get-Kth-Magic-Number-LCCI  interview-17.09-Get-Kth-Magic-Number-LCCI.cpp)
add_executable(interview-17.11-Find-Closest-LCCI  interview-17.11-Find-Closest-LCCI.cpp)
add_executable(interview-17.15-Longest-Word-LCCI  interview-17.15-Longest-Word-LCCI.cpp)
add_executable(interview-17.18-Shortest-Supersequence-LCCI  interview-17.18-Shortest-Supersequence-LCCI.cpp)
add_executable(interview-17.22-Word-Transformer-LCCI  interview-17.22-Word-Transformer-LCCI.cpp)
add_executable(interview-17.24-Max-Submatrix-LCCI  interview-17.24-Max-Submatrix-LCCI.cpp)
add_executable(LCP-03-Programmable-Robot  LCP-03-Programmable-Robot.cpp)
add_executable(LCP-08  LCP-08.cpp)
add_executable(main  main.cpp)
add_executable(Offer-12-LCOF  Offer-12-LCOF.cpp)
add_executable(Offer-17.23-Max-Black-Square-LCCI  Offer-17.23-Max-Black-Square-LCCI.cpp)
add_executable(Offer-32-III-LCOF  Offer-32-III-LCOF.cpp)
add_executable(Offer-51-reversePairs  Offer-51-reversePairs.cpp)
add_executable(Offer-52-LCOF  Offer-52-LCOF.cpp)
add_executable(Offer-61-LCOF  Offer-61-LCOF.cpp)
add_executable(00259-3Sum-Smaller  00259-3Sum-Smaller.cpp)
add_executable(00304-Range-Sum-Query-2D-Immutable  00304-Range-Sum-Query-2D-Immutable.cpp)
add_executable(00306-Additive-Number  00306-Additive-Number.cpp)
add_executable(00308-Range-Sum-Query-2D-Mutable  00308-Range-Sum-Query-2D-Mutable.cpp)
add_executable(00312-Burst-Balloons  00312-Burst-Balloons.cpp)
add_executable(00315-Count-of-Smaller-Numbers-After-Self  00315-Count-of-Smaller-Numbers-After-Self.cpp)
add_executable(00321-Create-Maximum-Number  00321-Create-Maximum-Number.cpp)
add_executable(00322-Coin-Change  00322-Coin-Change.cpp)
add_executable(00327-Count-of-Range-Sum  00327-Count-of-Range-Sum.cpp)
add_executable(00331-Verify-Preorder-Serialization-of-a-Binary-Tree  00331-Verify-Preorder-Serialization-of-a-Binary-Tree.cpp)
add_executable(00338-Counting-Bits  00338-Counting-Bits.cpp)
add_executable(00340-Longest-Substring-with-At-Most-K-Distinct-Characters  00340-Longest-Substring-with-At-Most-K-Distinct-Characters.cpp)
add_executable(00347-Top-K-Frequent-Elements  00347-Top-K-Frequent-Elements.cpp)
add_executable(00354-Russian-Doll-Envelopes  00354-Russian-Doll-Envelopes.cpp)
add_executable(00365-Water-and-Jug-Problem  00365-Water-and-Jug-Problem.cpp)
add_executable(00377-Combination-Sum-IV  00377-Combination-Sum-IV.cpp)
add_executable(00378-Kth-Smallest-Element-in-a-Sorted-Matrix  00378-Kth-Smallest-Element-in-a-Sorted-Matrix.cpp)
add_executable(00394-Decode-String  00394-Decode-String.cpp)
add_executable(00395-Longest-Substring-with-At-Least-K-Repeating-Characters  00395-Longest-Substring-with-At-Least-K-Repeating-Characters.cpp)
add_executable(00496-Next-Greater-Element-I  00496-Next-Greater-Element-I.cpp)
add_executable(00499-The-Maze-III  00499-The-Maze-III.cpp)
add_executable(00503-Next-Greater-Element-II  00503-Next-Greater-Element-II.cpp)
add_executable(00505-The-Maze-II  00505-The-Maze-II.cpp)
add_executable(00513-Find-Bottom-Left-Tree-Value  00513-Find-Bottom-Left-Tree-Value.cpp)
add_executable(00523-Continuous-Subarray-Sum  00523-Continuous-Subarray-Sum.cpp)
add_executable(00536-Construct-Binary-Tree-from-String  00536-Construct-Binary-Tree-from-String.cpp)
add_executable(00538-Convert-BST-to-Greater-Tree  00538-Convert-BST-to-Greater-Tree.cpp)
add_executable(00542-01-Matrix  00542-01-Matrix.cpp)
add_executable(00556-Next-Greater-Element-III  00556-Next-Greater-Element-III.cpp)
add_executable(00560-Subarray-Sum-Equals-K  00560-Subarray-Sum-Equals-K.cpp)
add_executable(00561-Array-Partition-I  00561-Array-Partition-I.cpp)
add_executable(00566-Reshape-the-Matrix  00566-Reshape-the-Matrix.cpp)
add_executable(00567-Permutation-in-String  00567-Permutation-in-String.cpp)
add_executable(00581-Shortest-Unsorted-Continuous-Subarray  00581-Shortest-Unsorted-Continuous-Subarray.cpp)
add_executable(00611-Valid-Triangle-Number  00611-Valid-Triangle-Number.cpp)
add_executable(00617-Merge-Two-Binary-Trees  00617-Merge-Two-Binary-Trees.cpp)
add_executable(00621-Task-Scheduler  00621-Task-Scheduler.cpp)
add_executable(00643-Maximum-Average-Subarray-I  00643-Maximum-Average-Subarray-I.cpp)
add_executable(00650-2-Keys-Keyboard  00650-2-Keys-Keyboard.cpp)
add_executable(00656-Coin-Path  00656-Coin-Path.cpp)
add_executable(00110-Balanced-Binary-Tree  00110-Balanced-Binary-Tree.cpp)
add_executable(00253-Meeting-Rooms-II  00253-Meeting-Rooms-II.cpp)
add_executable(00410-Split-Array-Largest-Sum  00410-Split-Array-Largest-Sum.cpp)
add_executable(00493-Reverse-Pairs  00493-Reverse-Pairs.cpp)
add_executable(00659-Split-Array-into-Consecutive-Subsequences  00659-Split-Array-into-Consecutive-Subsequences.cpp)
add_executable(00888-Fair-Candy-Swap  00888-Fair-Candy-Swap.cpp)
add_executable(01059-All-Paths-from-Source-Lead-to-Destination  01059-All-Paths-from-Source-Lead-to-Destination.cpp)
add_executable(01311-Get-Watched-Videos-by-Your-Friends  01311-Get-Watched-Videos-by-Your-Friends.cpp)
add_executable(01740-Find-Distance-in-a-Binary-Tree  01740-Find-Distance-in-a-Binary-Tree.cpp)
add_executable(00909-Snakes-and-Ladders  00909-Snakes-and-Ladders.cpp)
add_executable(00934-Shortest-Bridge  00934-Shortest-Bridge.cpp)
add_executable(00950-Reveal-Cards-In-Increasing-Order  00950-Reveal-Cards-In-Increasing-Order.cpp)
add_executable(00978-Longest-Turbulent-Subarray  00978-Longest-Turbulent-Subarray.cpp)
add_executable(00980-Unique-Paths-III  00980-Unique-Paths-III.cpp)
add_executable(00992-Subarrays-with-K-Different-Integers  00992-Subarrays-with-K-Different-Integers.cpp)
add_executable(00995-Minimum-Number-of-K-Consecutive-Bit-Flips  00995-Minimum-Number-of-K-Consecutive-Bit-Flips.cpp)
add_executable(01000-Minimum-Cost-to-Merge-Stones  01000-Minimum-Cost-to-Merge-Stones.cpp)
add_executable(01004-Max-Consecutive-Ones-III  01004-Max-Consecutive-Ones-III.cpp)
add_executable(01008-Construct-Binary-Search-Tree-from-Preorder-Traversal  01008-Construct-Binary-Search-Tree-from-Preorder-Traversal.cpp)
add_executable(01028-Recover-a-Tree-From-Preorder-Traversal  01028-Recover-a-Tree-From-Preorder-Traversal.cpp)
add_executable(01034-Coloring-A-Border  01034-Coloring-A-Border.cpp)
add_executable(01042-Flower-Planting-With-No-Adjacent  01042-Flower-Planting-With-No-Adjacent.cpp)
add_executable(01043-Partition-Array-for-Maximum-Sum  01043-Partition-Array-for-Maximum-Sum.cpp)
add_executable(01052-Grumpy-Bookstore-Owner  01052-Grumpy-Bookstore-Owner.cpp)
add_executable(01058-Minimize-Rounding-Error-to-Meet-Target  01058-Minimize-Rounding-Error-to-Meet-Target.cpp)
add_executable(01367-Linked-List-in-Binary-Tree  01367-Linked-List-in-Binary-Tree.cpp)
add_executable(01376-Time-Needed-to-Inform-All-Employees  01376-Time-Needed-to-Inform-All-Employees.cpp)
add_executable(01391-Check-if-There-is-a-Valid-Path-in-a-Grid  01391-Check-if-There-is-a-Valid-Path-in-a-Grid.cpp)
add_executable(01423-Maximum-Points-You-Can-Obtain-from-Cards  01423-Maximum-Points-You-Can-Obtain-from-Cards.cpp)
add_executable(01438-Longest-Continuous-Subarray-With-Absolute-Diff-Less-Than-or-Equal-to-Limit  01438-Longest-Continuous-Subarray-With-Absolute-Diff-Less-Than-or-Equal-to-Limit.cpp)
add_executable(01443-Minimum-Time-to-Collect-All-Apples-in-a-Tree  01443-Minimum-Time-to-Collect-All-Apples-in-a-Tree.cpp)
add_executable(01519-Number-of-Nodes-in-the-Sub-Tree-With-the-Same-Label  01519-Number-of-Nodes-in-the-Sub-Tree-With-the-Same-Label.cpp)
add_executable(01536-Minimum-Swaps-to-Arrange-a-Binary-Grid  01536-Minimum-Swaps-to-Arrange-a-Binary-Grid.cpp)
add_executable(01547-Minimum-Cost-to-Cut-a-Stick  01547-Minimum-Cost-to-Cut-a-Stick.cpp)
add_executable(01577-Number-of-Ways-Where-Square-of-Number-Is-Equal-to-Product-of-Two-Numbers  01577-Number-of-Ways-Where-Square-of-Number-Is-Equal-to-Product-of-Two-Numbers.cpp)
add_executable(01626-Best-Team-With-No-Conflicts  01626-Best-Team-With-No-Conflicts.cpp)
add_executable(00662-Maximum-Width-of-Binary-Tree  00662-Maximum-Width-of-Binary-Tree.cpp)
add_executable(00665-Non-decreasing-Array  00665-Non-decreasing-Array.cpp)
add_executable(00679-24-Game  00679-24-Game.cpp)
add_executable(00703-Kth-Largest-Element-in-a-Stream  00703-Kth-Largest-Element-in-a-Stream.cpp)
add_executable(00713-Subarray-Product-Less-Than-K  00713-Subarray-Product-Less-Than-K.cpp)
add_executable(00738-Monotone-Increasing-Digits  00738-Monotone-Increasing-Digits.cpp)
add_executable(00743-Network-Delay-Time  00743-Network-Delay-Time.cpp)
add_executable(00752-Open-the-Lock  00752-Open-the-Lock.cpp)
add_executable(00765-Couples-Holding-Hands  00765-Couples-Holding-Hands.cpp)
add_executable(00767-Reorganize-String  00767-Reorganize-String.cpp)
add_executable(00772-Basic-Calculator-III  00772-Basic-Calculator-III.cpp)
add_executable(00785-Is-Graph-Bipartite  00785-Is-Graph-Bipartite.cpp)
add_executable(00793-Preimage-Size-of-Factorial-Zeroes-Function  00793-Preimage-Size-of-Factorial-Zeroes-Function.cpp)
add_executable(00801-Minimum-Swaps-To-Make-Sequences-Increasing  00801-Minimum-Swaps-To-Make-Sequences-Increasing.cpp)
add_executable(00802-Find-Eventual-Safe-States  00802-Find-Eventual-Safe-States.cpp)
add_executable(00842-Split-Array-into-Fibonacci-Sequence  00842-Split-Array-into-Fibonacci-Sequence.cpp)
add_executable(00851-Loud-and-Rich  00851-Loud-and-Rich.cpp)
add_executable(00884-Uncommon-Words-from-Two-Sentences  00884-Uncommon-Words-from-Two-Sentences.cpp)
add_executable(00119-Pascals-Triangle-II  00119-Pascals-Triangle-II.cpp)
add_executable(00131-Palindrome-Partitioning  00131-Palindrome-Partitioning.cpp)
add_executable(00132-Palindrome-Partitioning-II  00132-Palindrome-Partitioning-II.cpp)
add_executable(00142-Linked-List-Cycle-II  00142-Linked-List-Cycle-II.cpp)
add_executable(00146-LRU-Cache  00146-LRU-Cache.cpp)
add_executable(00153-Find-Minimum-in-Rotated-Sorted-Array  00153-Find-Minimum-in-Rotated-Sorted-Array.cpp)
add_executable(00155-Min-Stack  00155-Min-Stack.cpp)
add_executable(00159-Longest-Substring-with-At-Most-Two-Distinct-Characters  00159-Longest-Substring-with-At-Most-Two-Distinct-Characters.cpp)
add_executable(00164-Maximum-Gap  00164-Maximum-Gap.cpp)
add_executable(00166-Fraction-to-Recurring-Decimal  00166-Fraction-to-Recurring-Decimal.cpp)
add_executable(00171-Excel-Sheet-Column-Number  00171-Excel-Sheet-Column-Number.cpp)
add_executable(00187-Repeated-DNA-Sequences  00187-Repeated-DNA-Sequences.cpp)
add_executable(00208-Implement-Trie  00208-Implement-Trie.cpp)
add_executable(00215-Kth-Largest-Element-in-an-Array  00215-Kth-Largest-Element-in-an-Array.cpp)
add_executable(00216.Combination-Sum-III  00216.Combination-Sum-III.cpp)
add_executable(00223-Rectangle-Area  00223-Rectangle-Area.cpp)
add_executable(00224-Basic-Calculator  00224-Basic-Calculator.cpp)
add_executable(00225-Implement-Stack-using-Queues  00225-Implement-Stack-using-Queues.cpp)
add_executable(00227-Basic-Calculator-II  00227-Basic-Calculator-II.cpp)
add_executable(00232-Implement-Queue-using-Stacks  00232-Implement-Queue-using-Stacks.cpp)
add_executable(00240-Search-a-2D-Matrix-II  00240-Search-a-2D-Matrix-II.cpp)
add_executable(00414-Third-Maximum-Number  00414-Third-Maximum-Number.cpp)
add_executable(00417-Pacific-Atlantic-Water-Flow  00417-Pacific-Atlantic-Water-Flow.cpp)
add_executable(00424-Longest-Repeating-Character-Replacement  00424-Longest-Repeating-Character-Replacement.cpp)
add_executable(00437-Path-Sum-III  00437-Path-Sum-III.cpp)
add_executable(00438-Find-All-Anagrams-in-a-String  00438-Find-All-Anagrams-in-a-String.cpp)
add_executable(00443-String-Compression  00443-String-Compression.cpp)
add_executable(00445-Add-Two-Numbers-II  00445-Add-Two-Numbers-II.cpp)
add_executable(00448-Find-All-Numbers-Disappeared-in-an-Array  00448-Find-All-Numbers-Disappeared-in-an-Array.cpp)
add_executable(00454-4Sum-II  00454-4Sum-II.cpp)
add_executable(00467-Unique-Substrings-in-Wraparound-String  00467-Unique-Substrings-in-Wraparound-String.cpp)
add_executable(00480-Sliding-Window-Median  00480-Sliding-Window-Median.cpp)
add_executable(00485-Max-Consecutive-Ones  00485-Max-Consecutive-Ones.cpp)
add_executable(00491-Increasing-Subsequences  00491-Increasing-Subsequences.cpp)
add_executable(01061-Lexicographically-Smallest-Equivalent-String  01061-Lexicographically-Smallest-Equivalent-String.cpp)
add_executable(01062-Longest-Repeating-Substring  01062-Longest-Repeating-Substring.cpp)
add_executable(01066-Campus-Bikes-II  01066-Campus-Bikes-II.cpp)
add_executable(01094-Car-Pooling  01094-Car-Pooling.cpp)
add_executable(01102-Path-With-Maximum-Minimum-Value  01102-Path-With-Maximum-Minimum-Value.cpp)
add_executable(01162-As-Far-from-Land-as-Possible  01162-As-Far-from-Land-as-Possible.cpp)
add_executable(01178-Number-of-Valid-Words-for-Each-Puzzle  01178-Number-of-Valid-Words-for-Each-Puzzle.cpp)
add_executable(01208-Get-Equal-Substrings-Within-Budget  01208-Get-Equal-Substrings-Within-Budget.cpp)
add_executable(01218-Longest-Arithmetic-Subsequence-of-Given-Difference  01218-Longest-Arithmetic-Subsequence-of-Given-Difference.cpp)
add_executable(01253-Reconstruct-a-2-Row-Binary-Matrix  01253-Reconstruct-a-2-Row-Binary-Matrix.cpp)
add_executable(01254-Number-of-Closed-Islands  01254-Number-of-Closed-Islands.cpp)
add_executable(01267-Count-Servers-that-Communicate  01267-Count-Servers-that-Communicate.cpp)
add_executable(01300-Sum-of-Mutated-Array-Closest-to-Target  01300-Sum-of-Mutated-Array-Closest-to-Target.cpp)
add_executable(01302-Deepest-Leaves-Sum  01302-Deepest-Leaves-Sum.cpp)
add_executable(01746-Maximum-Subarray-Sum-After-One-Operation  01746-Maximum-Subarray-Sum-After-One-Operation.cpp)
add_executable(05658-Maximum-Absolute-Sum-of-Any-Subarray  05658-Maximum-Absolute-Sum-of-Any-Subarray.cpp)
add_executable(05660-Maximum-Number-of-Events-That-Can-Be-Attended-II  05660-Maximum-Number-of-Events-That-Can-Be-Attended-II.cpp)
add_executable(05668-Longest-Nice-Substring  05668-Longest-Nice-Substring.cpp)
add_executable(05669-Form-Array-by-Concatenating-Subarrays-of-Another-Array  05669-Form-Array-by-Concatenating-Subarrays-of-Another-Array.cpp)
add_executable(05670-Tree-of-Coprimes  05670-Tree-of-Coprimes.cpp)
add_executable(05671-Map-of-Highest-Peak  05671-Map-of-Highest-Peak.cpp)
add_executable(05672-Check-if-Array-Is-Sorted-and-Rotated  05672-Check-if-Array-Is-Sorted-and-Rotated.cpp)
add_executable(05673-Maximum-Score-From-Removing-Stones  05673-Maximum-Score-From-Removing-Stones.cpp)
add_executable(05674-Largest-Merge-Of-Two-Strings  05674-Largest-Merge-Of-Two-Strings.cpp)
add_executable(05675-Closest-Subsequence-Sum  05675-Closest-Subsequence-Sum.cpp)
add_executable(05678-Minimum-Limit-of-Balls-in-a-Bag  05678-Minimum-Limit-of-Balls-in-a-Bag.cpp)
add_executable(05679-Minimum-Degree-of-a-Connected-Trio-in-a-Graph  05679-Minimum-Degree-of-a-Connected-Trio-in-a-Graph.cpp)
add_executable(05682-Sum-of-Beauty-of-All-Substrings  05682-Sum-of-Beauty-of-All-Substrings.cpp)
add_executable(05687-Maximum-Score-from-Performing-Multiplication-Operations  05687-Maximum-Score-from-Performing-Multiplication-Operations.cpp)
add_executable(05688-Maximize-Palindrome-Length-From-Subsequences  05688-Maximize-Palindrome-Length-From-Subsequences.cpp)
add_executable(05691-Equal-Sum-Arrays-With-Minimum-Number-of-Operations  05691-Equal-Sum-Arrays-With-Minimum-Number-of-Operations.cpp)
add_executable(05692-Car-Fleet-II  05692-Car-Fleet-II.cpp)
add_executable(05699-Number-of-Restricted-Paths-From-First-to-Last-Node  05699-Number-of-Restricted-Paths-From-First-to-Last-Node.cpp)
